--- a/tmux.conf
+++ b/tmux.conf
@@ -115,12 +115,8 @@ unbind -t vi-copy v
 bind-key -t vi-copy v begin-selection
 bind-key -t vi-copy C-v rectangle-toggle
 
-# Use 'y' to copy to clipboar
-bind-key -t vi-copy y copy-pipe "xclip -in -selection primary -filter | xclip -in -selection clipboard"
-
-# Update default binding of 'Enter' to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "xclip -in -selection primary -filter | xclip -in -selection clipboard"
+if-shell 'test "$(uname)" != "Darwin"' "source ~/.tmux-linux.conf"
+if-shell 'test "$(uname)" = "Darwin"' "source ~/.tmux-macos.conf"
 
 # vim:ft=conf:
 # }}}
