[tmux] Use standard colors for status bar
Also, add clock to status bar.

--- a/tmux.conf
+++ b/tmux.conf
@@ -48,20 +48,23 @@ setw -g aggressive-resize on
 
 # Status bar
 set -g status-bg colour8
-set -g status-fg colour234
+set -g status-fg colour7
 
 # Current session
 set -g status-left " #S "
 set -g status-left-length 15
-set -g status-left-fg colour229
-set -g status-left-bg colour166
+set -g status-left-fg colour7
+set -g status-left-bg colour16
 
 # Window list
-set -g window-status-format "#[fg=colour231] #I #[fg=colour231]#W#[fg=colour166]#F "
-set -g window-status-current-format "#[fg=colour117,bg=colour31] #I #[fg=colour231]#W#[fg=colour234]#F "
+set -g window-status-format "#[fg=colour7] #I #[fg=colour7]#W#[fg=colour19]#F "
+set -g window-status-current-format "#[fg=colour7,bg=colour6] #I #[fg=colour7]#W#[fg=colour19]#F "
 set -g window-status-separator ""
 
-set -g status-right ""
+set -g status-right "#[bg=colour6] %Y-%m-%d %l:%M:%S %p "
+
+# Update the status bar once per second
+set -g status-interval 1
 
 # }}}
 # => Global (Non-Prefixed) Key Bindings {{{
