[tmux] Color unfocused panes differently

--- a/tmux.conf
+++ b/tmux.conf
@@ -67,6 +67,16 @@ set -g status-right "#[bg=colour6] %Y-%m-%d %l:%M:%S %p "
 set -g status-interval 1
 
 # }}}
+# => Window Styles {{{
+# =====================================================================
+
+# Set unfocused windows to a dark blue background
+set-window-option -g window-style "fg=colour0,bg=colour18"
+
+# Set the focused window to the standard grey
+set-window-option -g window-active-style "fg=colour15,bg=colour0"
+
+# }}}
 # => Global (Non-Prefixed) Key Bindings {{{
 # =====================================================================
 
