[tmux|vim] Dim inactive panes to help focus

--- a/tmux.conf
+++ b/tmux.conf
@@ -76,6 +76,9 @@ set-window-option -g window-style "fg=colour15,bg=colour18"
 # Set the focused window to the standard grey
 set-window-option -g window-active-style "fg=colour7,bg=colour0"
 
+# Emit focus events so vim will recolor when inactive
+set -g focus-events on
+
 # }}}
 # => Global (Non-Prefixed) Key Bindings {{{
 # =====================================================================
