--- a/tmux-linux.conf
+++ b/tmux-linux.conf
@@ -1,6 +1,6 @@
 # Use 'y' to copy to clipboard
-bind-key -t vi-copy y copy-pipe "xclip -in -selection primary -filter | xclip -in -selection clipboard"
+bind-key -T copy-mode-vi y send-keys -X copy-pipe "xclip -in -selection primary -filter | xclip -in -selection clipboard"
 
 # Update default binding of 'Enter' to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "xclip -in -selection primary -filter | xclip -in -selection clipboard"
+unbind -T copy-mode-vi Enter
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe "xclip -in -selection primary -filter | xclip -in -selection clipboard"
