--- a/tmux.conf
+++ b/tmux.conf
@@ -127,9 +127,9 @@ bind-key E setw synchronize-panes off
 # =====================================================================
 
 # Use 'v' to begin selection as in Vim
-unbind -t vi-copy v
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy C-v rectangle-toggle
+unbind -T copy-mode-vi v
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 
 if-shell 'test "$(uname)" != "Darwin"' "source ~/.tmux-linux.conf"
 if-shell 'test "$(uname)" = "Darwin"' "source ~/.tmux-macos.conf"
