[tmux] Start changing the window title

--- a/tmux.conf
+++ b/tmux.conf
@@ -34,8 +34,9 @@ set -g history-limit 10000
 setw -g monitor-activity on
 set -g visual-activity on
 
-# Disable programs changing window names via terminal escape sequence
-set-window-option -g allow-rename off
+# Set the title of the terminal window
+set-option -g set-titles on
+set-option -g set-titles-string "[tmux:#S] #W"
 
 # Constrain window size to the minimum size of any client connected to
 # the window, instead of the minimum size of any client connected to
