[mpd] Update to modern MPD settings

--- a/tag-media/config/ncmpcpp/config
+++ b/tag-media/config/ncmpcpp/config
@@ -16,17 +16,19 @@ browser_playlist_prefix = "$2plist »$9 "
 browser_display_mode = "columns" (classic/columns)
 
 # Colors
-active_column_color = "green"
 active_window_border = "red"
 alternative_ui_separator_color = "green"
 color1 = "green"
 color2 = "cyan"
 colors_enabled = "yes"
+current_item_inactive_column_prefix = "$(green)$r"
+current_item_inactive_column_suffix = "$/r$(end)"
+current_item_prefix = "$(cyan)$r"
+current_item_suffix = "$/r$(end)"
 discard_colors_if_item_is_selected = "yes"
 empty_tag_color = "cyan"
 header_window_color = "green"
 main_window_color = "green"
-main_window_highlight_color = "cyan"
 progressbar_color = "green"
 progressbar_elapsed_color = "blue"
 state_flags_color = "green"
