[tmux] Update backwards-incompatible styling
In tmux v2.9a, the old way of configuring `status-left` and
`status-right` styling was removed in favor of the `status-left-style`
and `status-left-style` options. This change will be compatible with
v2.9a and later (and perhaps earlier, but I cannot find when this
option was introduced).

--- a/tmux.conf
+++ b/tmux.conf
@@ -54,8 +54,7 @@ set -g status-fg colour7
 # Current session
 set -g status-left " #S "
 set -g status-left-length 15
-set -g status-left-fg colour7
-set -g status-left-bg colour16
+set -g status-left-style 'fg=colour7,bg=colour16'
 
 # Window list
 set -g window-status-format "#[fg=colour7] #I #[fg=colour7]#W#[fg=colour19]#F "
