--- a/config/alacritty.yml
+++ b/config/alacritty.yml
@@ -466,6 +466,8 @@ alt_send_esc: true
 key_bindings:
   - { key: V,        mods: Command,       action: Paste                            }
   - { key: C,        mods: Command,       action: Copy                             }
+  - { key: V,        mods: Control,       action: Paste                            }
+  - { key: C,        mods: Control,       action: Copy                             }
   - { key: Equals,   mods: Command|Shift, action: IncreaseFontSize                 }
   - { key: Minus,    mods: Command,       action: DecreaseFontSize                 }
 
