--- a/tmux-linux.conf
+++ b/tmux-linux.conf
@@ -1,6 +1,17 @@
-# Use 'y' to copy to clipboard
-bind-key -T copy-mode-vi y send-keys -X copy-pipe "xclip -in -selection primary -filter | xclip -in -selection clipboard"
+if-shell 'test "$XDG_SESSION_TYPE" != "wayland"' {
+  # Use 'y' to copy to clipboard
+  bind-key -T copy-mode-vi y send-keys -X copy-pipe "xclip -in -selection primary -filter | xclip -in -selection clipboard"
 
-# Update default binding of 'Enter' to also use copy-pipe
-unbind -T copy-mode-vi Enter
-bind-key -T copy-mode-vi Enter send-keys -X copy-pipe "xclip -in -selection primary -filter | xclip -in -selection clipboard"
+  # Update default binding of 'Enter' to also use copy-pipe
+  unbind -T copy-mode-vi Enter
+  bind-key -T copy-mode-vi Enter send-keys -X copy-pipe "xclip -in -selection primary -filter | xclip -in -selection clipboard"
+}
+
+if-shell 'test "$XDG_SESSION_TYPE" = "wayland"' {
+  # Use 'y' to copy to clipboard
+  bind-key -T copy-mode-vi y send-keys -X copy-pipe "wl-copy"
+
+  # Update default binding of 'Enter' to also use copy-pipe
+  unbind -T copy-mode-vi Enter
+  bind-key -T copy-mode-vi Enter send-keys -X copy-pipe "wl-copy"
+}
