[tmux] Fix an error in tmux configuration

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -131,8 +131,8 @@ unbind -T copy-mode-vi v
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 
-if-shell 'test "$(uname)" != "Darwin"' "source ~/.config/tmux-linux.conf"
-if-shell 'test "$(uname)" = "Darwin"' "source ~/.config/tmux-macos.conf"
+if-shell 'test "$(uname)" != "Darwin"' "source ~/.config/tmux/tmux-linux.conf"
+if-shell 'test "$(uname)" = "Darwin"' "source ~/.config/tmux/tmux-macos.conf"
 
 # vim:ft=conf:
 # }}}
