--- a/config/git/config
+++ b/config/git/config
@@ -44,6 +44,7 @@
 
 [core]
   attributesfile = ~/.config/git/attributes
+  commitGraph = true
   excludesfile = ~/.config/git/ignore
 
 [credential]
