[tmux] Fix sourcing the config file
When I moved the config file into `XDG_CONFIG_HOME`, I forgot to update
this binding to account for it.

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -111,7 +111,7 @@ bind-key C-l send-keys "C-l"
 bind-key C-k send-keys "C-k"
 
 # Reload .tmux.conf
-bind-key R source-file ~/.tmux.conf
+bind-key R source-file ~/.config/tmux/tmux.conf \; display-message "Configuration reloaded"
 
 # Vim-style resizing
 bind-key -r h resize-pane -L 1
