[tmux] Make `C-a C-l` actually clear the screen
This clears the screen and history for tmux with the small caveat that
it inserts an extra carriage return. That is less annoying that needing
to do `C-l C-a :clear-history Ret` so I'll take it.

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -105,7 +105,7 @@ bind-key | split-window -c "#{pane_current_path}" -h
 bind-key c new-window   -c "#{pane_current_path}"
 
 # Bring back clear screen under tmux prefix
-bind-key C-l send-keys "C-l"
+bind-key C-l send-keys -R  \; clear-history
 
 # Bring back kill line under tmux prefix
 bind-key C-k send-keys "C-k"
