[tmux] List sessions in alphabetical order
I open many more projects at my new work than I used to so I end up with
many more tmux sessions. This helps me quickly scan for and find the one
I want.

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -123,6 +123,9 @@ bind-key -r l resize-pane -R 1
 bind-key e setw synchronize-panes on
 bind-key E setw synchronize-panes off
 
+# Select sessions in alphabetical order
+bind-key s choose-tree -s -O name
+
 # }}}
 # => Copy-Mode Key Bindings {{{
 # =====================================================================
