[font] Use standardized FiraCode Nerd Font
All packages now use this name so I should be able to use it everywhere
now.

--- a/config/alacritty.yml
+++ b/config/alacritty.yml
@@ -13,7 +13,7 @@ scrolling:
 
 font:
   normal:
-    family: Fura Code Nerd Font
+    family: FiraCode Nerd Font
   size: 12.0
   use_thin_strokes: true
 
