--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -48,21 +48,15 @@ setw -g aggressive-resize on
 # => Status Line {{{
 # =====================================================================
 
-# Status bar
-set -g status-bg colour8
-set -g status-fg colour7
-
 # Current session
 set -g status-left " #S "
 set -g status-left-length 15
-set -g status-left-style 'fg=colour7,bg=colour16'
 
 # Window list
-set -g window-status-format "#[fg=colour7] #I #[fg=colour7]#W#[fg=colour19]#F "
-set -g window-status-current-format "#[fg=colour7,bg=colour6] #I #[fg=colour7]#W#[fg=colour19]#F "
-set -g window-status-separator ""
+set -g window-status-format " #I #W#F "
+set -g window-status-separator " "
 
-set -g status-right "#[bg=colour6] %Y-%m-%d %l:%M:%S %p "
+set -g status-right " %Y-%m-%d %l:%M:%S %p "
 
 # Update the status bar once per second
 set -g status-interval 1
@@ -71,14 +65,27 @@ set -g status-interval 1
 # => Window Styles {{{
 # =====================================================================
 
-# Set unfocused windows to a dark blue background
-set-window-option -g window-style "fg=colour15,bg=colour18"
-
-# Set the focused window to the standard grey
-set-window-option -g window-active-style "fg=colour7,bg=colour0"
-
 # Emit focus events so vim will recolor when inactive
 set -g focus-events on
+
+# }}}
+# => Style {{{
+# =====================================================================
+
+set-option -g clock-mode-colour             green
+set-option -g display-panes-active-colour   green
+set-option -g display-panes-colour          cyan
+set-option -g message-command-style         fg=yellow,bg=black
+set-option -g message-style                 fg=black,bg=yellow
+set-option -g pane-active-border-style      fg=green
+set-option -g pane-border-style             fg=cyan
+set-option -g status-style                  fg=white,bg=black,dim
+set-option -g window-active-style           fg=white,bg=black
+set-option -g window-status-activity-style  fg=yellow
+set-option -g window-status-bell-style      fg=red
+set-option -g window-status-current-style   fg=green,bg=black,bright
+set-option -g window-status-style           fg=colour123,bg=black,dim
+set-option -g window-style                  fg=#e2e4e5,bg=#3a3d4d
 
 # }}}
 # => Global (Non-Prefixed) Key Bindings {{{
