--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -37,7 +37,7 @@ set -g visual-activity on
 
 # Set the title of the terminal window
 set-option -g set-titles on
-set-option -g set-titles-string "[tmux:#S] #W"
+set-option -g set-titles-string "#W [tmux:#S]"
 
 # Constrain window size to the minimum size of any client connected to
 # the window, instead of the minimum size of any client connected to
