[emacs] Ignore generated packages file
I manage this from the literate configuration in `config.org` so I
shouldn't keep an extra copy.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+tag-emacs/config/doom/packages.el
 tag-emacs-old/emacs.d/elpa/
 tag-emacs-old/emacs.d/files/backups/*~
 tag-emacs-old/emacs.d/recentf
