--- a/tag-linux/config/environment.d/00-xdg.conf
+++ b/tag-linux/config/environment.d/00-xdg.conf
@@ -1,3 +1,4 @@
 XDG_CACHE_HOME=${XDG_CACHE_HOME:-$HOME/.cache}
 XDG_CONFIG_HOME=${XDG_CONFIG_HOME:-$HOME/.config}
 XDG_DATA_HOME=${XDG_DATA_HOME:-$HOME/.local/share}
+XDG_STATE_HOME=${XDG_STATE_HOME:-$HOME/.local/state}
