--- a/config/git/config
+++ b/config/git/config
@@ -66,12 +66,18 @@
 [fetch]
   prune = true
 
+[gc]
+  writeCommitGraph = true
+
 [help]
   autocorrect = 1
 
 [init]
   templatedir = ~/.config/git/template
   defaultBranch = main
+
+[protocol]
+  version = 2
 
 [pull]
   ff = only
