--- a/tag-linux/config/environment.d/60-vim.conf
+++ b/tag-linux/config/environment.d/60-vim.conf
@@ -1,2 +1,2 @@
-GVIMINIT='let $MYGVIMRC="$XDG_CONFIG_HOME/vim/gvimrc" | source $MYGVIMRC'
-VIMINIT='let $MYVIMRC="$XDG_CONFIG_HOME/vim/vimrc" | source $MYVIMRC'
+GVIMINIT='let $$MYGVIMRC="$XDG_CONFIG_HOME/vim/gvimrc" | source $$MYGVIMRC'
+VIMINIT='let $$MYVIMRC="$XDG_CONFIG_HOME/vim/vimrc" | source $$MYVIMRC'
