[git] Simplify GitHub rewrites
I wrote these a long time ago and didn't fully understand them back
then. I understand it a lot better now, including how to use them so
I want to clean it up.

Now, I have clean aliases that don't try to use different push URLs for
GitHub since I want the same fetch and push URLs. If I don't have access
to my YubiKey, I don't want to (by default) be able to pull or push code.

--- a/config/git/config
+++ b/config/git/config
@@ -93,21 +93,14 @@
 # Rewrite github to SSH for aliases and when pushing
 [url "git@github.com:"]
 	insteadOf = "gh:"
+	insteadOf = "github:"
 	insteadOf = "git://github.com"
-	pushInsteadOf = "github:"
-	pushInsteadOf = "git://github.com/"
-	pushInsteadOf = "https://github.com/"
+	insteadOf = "https://github.com/"
 
-# Retwrite gists to SSH for aliases and when pushing
+# Rewrite gists to SSH for aliases and when pushing
 [url "git@gist.github.com:"]
 	insteadOf = "gst:"
-	pushInsteadOf = "gist:"
-	pushInsteadOf = "git://gist.github.com/"
-	pushInsteadOf = "https://gist.github.com/"
-
-# Make sure we're using SSH for any of my repos
-[url "git@github.com:michaelherold/"]
-	insteadOf = "git://github.com/michaelherold/"
+	insteadOf = "gist:"
 
 [user]
 	signingkey = "E3974749"
