--- a/config/git/config
+++ b/config/git/config
@@ -14,7 +14,7 @@
 	fm = find-migration
 	lc = "diff HEAD^1..HEAD"
 	lg = log --graph --pretty=format:'%Cred%h%Creset %Cblue<%ae>%C(yellow)%d%Creset %s %Cgreen(%cr)%Creset' --abbrev-commit --date=relative
-	merged-to-main = !git branch --merged | grep -v "'\\*\\|$(git main-branch)'"
+	merged-to-main = !git branch --merged | grep -v \"*\\\\|^[[:space:]]\\\\+$(git main-branch)$\"
 	merged-remote = !git branch -vv | grep ': gone]' | awk '{ print $1 }'
 	oss = !git config user.email "opensource@michaeljherold.com"
 	pf = push --force-with-lease
