[git] Add a git-extend command
I often fix up the last commit during code review without needing to
update the message. This makes that easier. I stole the naming of the
command [from Magit][1], which continues to be the best Git companion.

This command keeps the original committer date instead of overwriting
it.

[1]: https://github.com/magit/magit/blob/9c66514b2c879a8959b676393467b1f24be71303/lisp/magit-commit.el#L200-L217

--- a/config/git/config
+++ b/config/git/config
@@ -11,6 +11,7 @@
 	cleanup = "!git merged-to-main | xargs -n 1 git branch -d; git merged-remote | xargs -n 1 git branch -D"
 	cpr = co-pr
 	dp = diff --patience
+	extend = commit --amend --no-edit
 	fm = find-migration
 	lc = "diff HEAD^1..HEAD"
 	lg = log --graph --pretty=format:'%Cred%h%Creset %Cblue<%ae>%C(yellow)%d%Creset %s %Cgreen(%cr)%Creset' --abbrev-commit --date=relative
