[git] Add an easy way to manage pairing
This command, `git pair`, accepts a fuzzy-find search for another
coauthor and adds them automatically via `git interpret-trailers` as
a Co-authored-by trailer at the end of a commit message.

--- a/config/git/config
+++ b/config/git/config
@@ -16,6 +16,7 @@
 	lg = log --graph --pretty=format:'%Cred%h%Creset %Cblue<%ae>%C(yellow)%d%Creset %s %Cgreen(%cr)%Creset' --abbrev-commit --date=relative
 	merged-to-main = !git branch --merged | grep -v \"*\\\\|^[[:space:]]\\\\+$(git main-branch)$\"
 	merged-remote = !git branch -vv | grep ': gone]' | awk '{ print $1 }'
+	mob = !git pair
 	oss = !git config user.email "opensource@michaeljherold.com"
 	pf = push --force-with-lease
 	rbm = !git rebase $(git main-branch) --committer-date-is-author-date
