--- a/config/git/config
+++ b/config/git/config
@@ -67,6 +67,12 @@
 [fetch]
 	prune = true
 
+[filter "lfs"]
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
+	clean = git-lfs clean -- %f
+
 [help]
 	autocorrect = 1
 
