[emacs] Ignore generated autoload files
I keep my configuration in a literate Org file for Doom. I don't want to
keep two copies of the code in my repository so this change ensures that
Git doesn't track the generated file(s).

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 config/kitty/kitty.conf.bak
+tag-emacs/config/doom/autoload/
 tag-emacs/config/doom/packages.el
 tag-emacs-old/emacs.d/elpa/
 tag-emacs-old/emacs.d/files/backups/*~
