[alacritty] Fix a two no-modifier bindings
I'm not sure if this changed at some point or I failed to migrate
properly when I moved to the TOML configuration, but this syntax is now
necessary for when you are not using modifier keys on a binding.

--- a/config/alacritty.toml
+++ b/config/alacritty.toml
@@ -48,10 +48,10 @@ family = "FiraCode Nerd Font"
 [keyboard]
 bindings = [
   { action = "Copy",             key = "C",      mods = "Control|Shift" },
-  { action = "Copy",             key = "Copy",   mods = "" },
+  { action = "Copy",             key = "Copy",   mods = "None" },
   { action = "DecreaseFontSize", key = "Minus",  mods = "Control|Shift" },
   { action = "IncreaseFontSize", key = "Equals", mods = "Control|Shift" },
-  { action = "Paste",            key = "Paste",  mods = "" },
+  { action = "Paste",            key = "Paste",  mods = "None" },
   { action = "Paste",            key = "V",      mods = "Control|Shift" },
 ]
 
