[ghostty] Adjust the font name
I had a typo here but didn't realize it due to ligatures working as
I expected. That was surprising. I've verified the font is correct now.

--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -1,5 +1,5 @@
 cursor-style-blink = false
-font-family = FuraCode Nerd Font Mono
+font-family = FiraCode Nerd Font
 font-size = 16.0
 shell-integration-features = no-cursor,sudo,title
 theme = "dark:Snazzy Soft,light:Spring"
