--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -2,7 +2,7 @@ cursor-style-blink = false
 font-family = FiraCode Nerd Font
 font-size = 16.0
 shell-integration-features = no-cursor,sudo,title
-theme = "dark:Snazzy Soft,light:Spring"
+theme = "dark:apropospriate-dark,light:apropospriate-light"
 window-padding-x = 8
 
 macos-titlebar-style = transparent
