--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -75,17 +75,17 @@ set -g focus-events on
 set-option -g clock-mode-colour             green
 set-option -g display-panes-active-colour   green
 set-option -g display-panes-colour          cyan
-set-option -g message-command-style         fg=yellow,bg=black
-set-option -g message-style                 fg=black,bg=yellow
-set-option -g pane-active-border-style      fg=green
-set-option -g pane-border-style             fg=cyan
-set-option -g status-style                  fg=white,bg=black,dim
-set-option -g window-active-style           fg=white,bg=black
+set-option -g message-command-style         fg=yellow,bg=terminal
+set-option -g message-style                 fg=black,bg=brightyellow
+set-option -g pane-active-border-style      fg=brightcyan
+set-option -g pane-border-style             fg=default
+set-option -g status-style                  fg=default,bg=terminal
+set-option -g window-active-style           fg=default,bg=terminal
 set-option -g window-status-activity-style  fg=yellow
-set-option -g window-status-bell-style      fg=red
-set-option -g window-status-current-style   fg=green,bg=black,bright
-set-option -g window-status-style           fg=colour123,bg=black,dim
-set-option -g window-style                  fg=#e2e4e5,bg=#3a3d4d
+set-option -g window-status-bell-style      fg=default,bg=red
+set-option -g window-status-current-style   fg=brightred,bg=terminal
+set-option -g window-status-style           fg=brightyellow,bg=terminal
+set-option -g window-style                  fg=default,bg=terminal
 
 # }}}
 # => Global (Non-Prefixed) Key Bindings {{{
