--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -5,4 +5,4 @@ shell-integration-features = no-cursor,sudo,title
 theme = "dark:apropospriate-dark,light:apropospriate-light"
 window-padding-x = 8
 
-macos-titlebar-style = transparent
+config-file = ?config-local
